# agent-production-kernel

./: .gitignore  LICENSE  README.md  pyproject.toml
apkernel/: __init__.py  __main__.py  core.py  corpus.py  design.py  packs.py  replay.py  research.py  software.py
docs/: ARCHITECTURE.md  PHASES.md  SELF_DRIVING.md
examples/: agent_battle_harness_input_readiness_fixture.json  agent_battle_harness_report_fixture.json  autonomy_no_action_replay_fixture.json  autonomy_run_replay_fixture.json  autonomy_safe_action.json  bug_fix_scenario.json  checkpoint_branch_replay_fixture.json  design_review_demo.html  design_review_scenario.json  design_skill_corpus_fixture.json  design_skill_corpus_scenario.json  feature_build_scenario.json  golden_agent_battle_harness_failure_replay.json  golden_agent_battle_harness_input_readiness_failure_replay.json  golden_agent_battle_harness_input_readiness_replay.json  golden_agent_battle_harness_replay.json  golden_agent_battle_harness_source_artifact_failure_replay.json  golden_autonomy_boundary_failure_replay.json  golden_autonomy_boundary_replay.json  golden_autonomy_no_action_failure_replay.json  golden_autonomy_no_action_replay.json  golden_bug_fix_replay.json  golden_checkpoint_awaiting_human_replay.json  golden_checkpoint_blocked_replay.json  golden_checkpoint_branch_failure_replay.json  golden_checkpoint_failed_replay.json  golden_design_accessibility_failure_replay.json  golden_design_prototype_probe_failure_replay.json  golden_design_prototype_state_failure_replay.json  golden_design_release_attribution_failure_replay.json  (+34 more)
(+90 files in other folders)
