[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apkernel"
version = "0.1.0"
description = "Agent Production Kernel: an auditable control plane for agent-driven software production"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["apkernel*"]
